# libavax

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/avaxto/: CMakeLists.txt
examples/avaxto/crypto/: CMakeLists.txt  cb58.cpp
examples/avaxto/wallet/: CMakeLists.txt  addresses_from_mnemonic.cpp  generate_mnemonic.cpp
include/avaxto/: avax.h  avax_general.h  ids.h  libbitcoin.h  libglobals.h  log.h  rawbuf.h
include/avaxto/crypto/: bech32.h  cb58.h  keccak256.h  randnr.h
include/avaxto/network/: beacon-funcs.h  beacons.h  connect.h  connection.h  fields.h  fla.h  host.h  ip.h  msg.h  network.h  opcodes.h  peer.h  serialize.h  ssl.h  vla.h
include/avaxto/utils/: funcs.h
include/avaxto/wallet/: constants.h  evm_wallet.hpp  evm_wallet_readonly.hpp  hd_helper.h  hd_scanner.hpp  hd_wallet_abstract.hpp  hd_wallet_core.h  mnemonic.h  mnemonic_wallet.hpp  unsafe_wallet.h  wallet_core.h
include/avaxto/wallet/EVM/: evm_wallet.hpp
include/avaxto/wallet/ledger/: ledger_wallet.hpp  obsidian_provider.hpp  provider.hpp  provider_factory.hpp  provider_utils.hpp  transport.hpp  zondax_provider.hpp
include/libbitcoin/system/: define.hpp
include/libbitcoin/system/math/: elliptic_curve.hpp  hash.hpp
include/libbitcoin/system/unicode/: unicode.hpp
include/libbitcoin/system/utility/: array_slice.hpp  data.hpp  data_simple.hpp  endian.hpp  string.hpp
include/libbitcoin/system/wallet/: dictionary.hpp  ec_private.hpp  ec_public.hpp  hd_private.hpp  hd_public.hpp  mnemonic.hpp  simple.hpp
scripts/: build.sh  clean.sh  cleanbuild.sh  setenv.sh
src/: CMakeLists.txt
src/avaxto/crypto/: bech32.cpp  cb58.cpp  keccak256.cpp  randnr.cpp
src/avaxto/network/: beacons.c  connect.c  fields.c  msg.c  network.c  opcodes.c  peer.c
src/avaxto/utils/: funcs.cpp
src/avaxto/wallet/: evm_wallet.cpp  evm_wallet_readonly.cpp  hd_scanner.cpp  hd_wallet_abstract.cpp  mnemonic.cpp  mnemonic_wallet.cpp
src/avaxto/wallet/ledger/: ledger_wallet.cpp  obsidian_provider.cpp  provider_factory.cpp  provider_utils.cpp  zondax_provider.cpp
src/libbitcoin/system/: dictionary.cpp
stuff/: README  addrs.txt  genaddrs.sh  mnemonic.txt
